--- a/section4/accounts/pom.xml
+++ b/section4/accounts/pom.xml
@@ -91,7 +91,7 @@
 				<version>3.4.2</version>
 				<configuration>
 					<to>
-						<image>eazybytes/${project.artifactId}:s4</image>
+						<image>reysanor/${project.artifactId}:s4</image>
 					</to>
 				</configuration>
 			</plugin>
