--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -9,7 +9,7 @@
         <version>3.4.1</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.eazybytes</groupId>
+	<groupId>com.reysanor</groupId>
 	<artifactId>cards</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -112,7 +112,7 @@
 				<version>3.4.2</version>
 				<configuration>
 					<to>
-						<image>eazybytes/${project.artifactId}:s6</image>
+						<image>reysanor/${project.artifactId}:s6</image>
 					</to>
 				</configuration>
 			</plugin>
