--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -23,16 +23,13 @@ spring:
     username: "guest"
     password: "guest"
 
-# config refresh in runtime – spring cloud config react to changes in repo
-# spring boot actuator – give /actuator/ with endpoints.
-# /refresh – refresh event.
-# /busrefresh – refresh event connect by message brokers like kafka or rabbitmq
-# spring cloud bus - link services with message brokers
+
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  # Enable health checks - readiness and liveness probes
   health:
     readiness-state:
       enabled: true
