--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -6,23 +6,36 @@ spring:
     #profile is unchangeable, instead change configuration in accounts-prod.yml and reload
   profiles:
     active: "prod"
-    # datasource configuration for H2 database
+
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3306/accountsdb
+    username: root
+    password: root
 
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
     hibernate:
       # used during development to update the database schema automatically
       #ONLY FOR DEMO PURPOSES
       ddl-auto: update
-    show-sql: true
+  sql:
+    init:
+      # to always initialize the database schema on startup
+      mode: always
+    # datasource configuration for H2 database
+  #datasource:
+  #  url: jdbc:h2:mem:testdb
+  #  driverClassName: org.h2.Driver
+  #  username: sa
+  #  password: ''
+  #h2:
+  #  console:
+  #    enabled: true
+
+  #jpa:
+  #  database-platform: org.hibernate.dialect.H2Dialect
+
+
   config:
     # All microservices take config from configserver
     import: "optional:configserver:http://localhost:8071/"
