--- a/configserver/pom.xml
+++ b/configserver/pom.xml
@@ -8,7 +8,8 @@
 		<version>3.4.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.reysanor</groupId>
+	<groupId>com.reysanor
+	</groupId>
 	<artifactId>configserver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>configserver</name>
