--- a/docker-compose/qa/common-config.yml
+++ b/docker-compose/qa/common-config.yml
@@ -1,21 +1,45 @@
 services:
   network-deploy-service:
+    # Define common network for all services
     networks:
       - eazybank
 
+
+  # Base configuration for microservices
+  microservice-db-config:
+    extends:
+      service: network-deploy-service
+    image: mysql
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+
+  # Base configuration for microservices
   microservice-base-config:
     extends:
       service: network-deploy-service
     deploy:
       resources:
         limits:
+          # Set memory limit for microservices in megabytes
           memory: 700m
     environment:
       SPRING_RABBITMQ_HOST: "rabbit"
 
+  # Configuration for configuration server microservice
   microservice-configserver-config:
     extends:
       service: microservice-base-config
     environment:
+      # define active profile
       SPRING_PROFILES_ACTIVE: qa
+      #The spring.config.import property in Spring Boot is used to specify external configuration sources, such as a configuration server.
+      #You can override this property using the environment variable SPRING_CONFIG_IMPORT to point to a local or remote configuration server.
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+      SPRING_DATASORCE_USERNAME: root
+      SPRING_DATASORCE_PASSWORD: root
