--- a/docker-compose/qa/docker-compose.yml
+++ b/docker-compose/qa/docker-compose.yml
@@ -1,4 +1,35 @@
 services:
+  accountsdb:
+    container_name: accountsdb
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: accountsdb
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  cardsdb:
+    container_name: cardsdb
+    ports:
+      - "3308:3306"
+    environment:
+      MYSQL_DATABASE:  cardsdb
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  loansdb:
+    container_name: loansdb
+    ports:
+      - "3307:3306"
+
+    environment:
+      MYSQL_DATABASE: loansdb
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
   rabbit:
     image: rabbitmq:3.13-management
     hostname: rabbitmq
@@ -17,6 +48,8 @@ services:
 
   configserver:
     image: "reysanor/configserver:s6"
+    environment:
+
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -33,16 +66,22 @@ services:
       file: common-config.yml
       service: microservice-base-config
 
+  # Microservices configuration like port, dependecies, environment variables
   accounts:
     image: "reysanor/accounts:s6"
+    # if not provided, docker-compose will generate a random name
     container_name: accounts-ms
     ports:
       - "8080:8080"
     depends_on:
       configserver:
+        # Wait for configserver to be healthy before starting service
+        condition: service_healthy
+      accountsdb:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "accounts"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
@@ -55,8 +94,13 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
+      loansdb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
+      # with database service name
+      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3307/loansdb"
+
     extends:
       file: common-config.yml
       service: microservice-configserver-config
@@ -69,12 +113,16 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
+      cardsdb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "cards"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3308/cardsdb"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
 
 networks:
   eazybank:
+    # Use bridge network driver - this is a default driver in Docker
     driver: "bridge"
